done sections main, popilarExcursions, aboutUs, typeOfExcursions, smallGallery

--- a/src/partials/Main/main.html
+++ b/src/partials/Main/main.html
@@ -4,9 +4,9 @@
       <!-- <img src="./images/svg/logo.svg" alt="" /> -->
     </a>
     <nav class="header_nav">
-      <a class="header_nav_item">Головна</a>
-      <a class="header_nav_item">Екскурсії</a>
-      <a class="header_nav_item">Особистий кабінет</a>
+      <a href="" class="header_nav_item">Головна</a>
+      <a href="" class="header_nav_item">Екскурсії</a>
+      <a href="" class="header_nav_item">Особистий кабінет</a>
     </nav>
   </header>
 
@@ -16,24 +16,28 @@
         ПОДОРОЖУЙ <br /><span class="main_title_span-together">разом з</span>
         <span class="main_title_span-PeroTravel">PERO TRAVEL</span>
       </h1>
-      <button class="main_buttom" type="button">До екскурсій</button>
+      <a href="" class="main_buttom">До екскурсій</a>
     </div>
     <ul class="list main_socials">
       <li class="main_socials_item">
-        <a href="">
-          <svg width="32" height="32"><use href="./images/svg/symbols.svg#vk"></use></svg>
+        <a href="https://twitter.com/?lang=uk">
+          <svg width="32" height="32"><use href="./images/svg/symbols.svg#twitter"></use></svg>
         </a>
       </li>
       <li class="main_socials_item">
-        <a href="">
+        <a href="https://www.instagram.com/">
           <svg width="32" height="32"><use href="./images/svg/symbols.svg#insta"></use></svg>
         </a>
       </li>
       <li class="main_socials_item">
-        <a href="">
+        <a href="https://uk-ua.facebook.com/">
           <svg width="32" height="32"><use href="./images/svg/symbols.svg#facebook"></use></svg>
         </a>
       </li>
     </ul>
+  </div>
+  <div class="main_video">
+    <div class="main_video_first"><img src="./images/video1.jpg" alt="" /></div>
+    <div class="main_video_second"><img src="./images/video2.jpg" alt="" /></div>
   </div>
 </section>
