--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,8 @@
 @import './common';
 
-@import './example';
 @import './Main/main';
+@import './Main/popularExcursions';
+@import './Main/aboutUs';
+@import './Main/typeOfExcursions';
+@import './Main/smallGallery';
+@import './Main/reviews';
