--- a/src/sass/Main/_main.scss
+++ b/src/sass/Main/_main.scss
@@ -1,4 +1,5 @@
 .main {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -90,7 +91,7 @@
   width: 230px;
   height: 50px;
 
-  background: linear-gradient(92.71deg, #0499dd 0%, #17c1bc 100%);
+  background: linear-gradient(92.71deg, #0499dd 0%, #0ea8a2 100%);
   border-radius: 60px;
 
   font-weight: 700;
@@ -101,6 +102,10 @@
     display: block;
     content: url(../images/svg/arrowRight.svg);
     margin-left: 5px;
+  }
+  &:hover {
+    font-size: 16px;
+    background: linear-gradient(92.71deg, #08b8b2 0%, #067bb1 100%);
   }
 }
 .main_socials {
@@ -120,5 +125,27 @@
       stroke: #ffc700;
       fill: #ffc700;
     }
+  }
+}
+
+// --------- Main_video-------------//
+.main_video {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translateY(50%);
+  z-index: 2;
+}
+.main_video_first {
+  margin-right: 20px;
+  img {
+    border-radius: 11px;
+  }
+}
+.main_video_second {
+  margin-right: 20px;
+  img {
+    border-radius: 11px;
   }
 }
