--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -41,8 +41,8 @@ a {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 button {
   outline: none;
@@ -55,10 +55,8 @@ button {
   width: 1440px;
 }
 
-// .container {
-//   max-width: 1510px;
-//   padding-left: 15px;
-//   padding-right: 15px;
-//   margin-left: auto;
-//   margin-right: auto;
-// }
+.container {
+  width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
+}
