done all sections

--- a/src/partials/Main/reviews.html
+++ b/src/partials/Main/reviews.html
@@ -1,37 +1,78 @@
 <section class="reviews">
   <div class="container">
     <div class="popularExcursions_wrapperForText">
-      <p class="popularExcursions_text">Популярні екскурсії</p>
+      <p class="popularExcursions_text">Відгуки</p>
       <a class="popularExcursions_link" href="#">Дивитись всі</a>
     </div>
-    <div class="popularExcursions_slaider">
-      <div class="popularExcursions_slaider_line">
-        <div class="popularExcursions_slaider_line_content backImage-bridge">
-          <p class="content_subTitle">Автобусный тур</p>
-          <h2 class="content_title">Обзорная по Сочи (из Адлера)</h2>
-          <div class="wrapper_for_cost">
-            <p class="cost_time">6 часов</p>
-            <p class="cost_money">618 ₽</p>
+    <div class="reviews_slaider">
+      <ul class="list reviews_slaider_line">
+        <li class="line_item">
+          <img class="line_item_img" src="./images/firstRewiew.jpg" alt="" />
+          <div class="line_item_wrapperForText">
+            <h3 class="line_item_title">Іванов Іван, 25 років</h3>
+            <p class="line_item_text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </p>
           </div>
-          <p class="content_text">
-            Приглашаем вас на экскурсию "Обзорная по Большому Сочи": Экскурсия начнется с подъёма на
-            гору Большой Ахун - это высшая точка (665 метров) на побережьи Сочи. На вершине горы
-            Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту архитектора С.
-            И. Воробьева...
-          </p>
-          <a class="content_button" href="#">Подробнее</a>
-        </div>
-      </div>
+        </li>
+        <li class="line_item">
+          <img class="line_item_img" src="./images/secondRewiew.jpg" alt="" />
+          <div class="line_item_wrapperForText">
+            <h3 class="line_item_title">Петров Петро, 27 років</h3>
+            <p class="line_item_text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </p>
+          </div>
+        </li>
+        <li class="line_item">
+          <img class="line_item_img" src="./images/firstRewiew.jpg" alt="" />
+          <div class="line_item_wrapperForText">
+            <h3 class="line_item_title">Іванов Іван, 25 років</h3>
+            <p class="line_item_text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </p>
+          </div>
+        </li>
+        <li class="line_item">
+          <img class="line_item_img" src="./images/secondRewiew.jpg" alt="" />
+          <div class="line_item_wrapperForText">
+            <h3 class="line_item_title">Петров Петро, 27 років</h3>
+            <p class="line_item_text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+              mollit anim id est laborum.
+            </p>
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="popularExcursions_wrapperForScrolling">
-      <button class="button_slider btnScrolling_left" type="button">
+    <div class="reviews_wrapperForScrolling">
+      <button class="button_slider btnScrolling_left reviews_btnScrolling_left" type="button">
         <svg width="24" height="24"><use href="./images/svg/symbols.svg#arrow"></use></svg>
       </button>
-      <button class="button_slider btnScrolling_right" type="button">
+      <button class="button_slider btnScrolling_right reviews_btnScrolling_right" type="button">
         <svg width="24" height="24"><use href="./images/svg/symbols.svg#arrow"></use></svg>
       </button>
       <span class="scrolling_progres">
-        <span class="scrolling_progres_secces"></span>
+        <span class="scrolling_progres_secces reviews_scrolling_progres_secces"></span>
       </span>
     </div>
   </div>
