--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import './common';
+@import './footer';
 
 @import './Main/main';
 @import './Main/popularExcursions';
@@ -6,3 +7,4 @@
 @import './Main/typeOfExcursions';
 @import './Main/smallGallery';
 @import './Main/reviews';
+@import './Main/form';
