make menu_burger

--- a/src/partials/Main/form.html
+++ b/src/partials/Main/form.html
@@ -3,10 +3,10 @@
     <form class="form_form">
       <b class="form_title">Залишились питання?</b>
       <strong class="form_subTitle">Залиш заявку і ми відповімо</strong>
-      <input type="text" name="" id="Name" placeholder="Им'я" />
-      <input type="tel" name="" id="Phone" placeholder="Телефон" />
-      <input type="email" name="" id="Email" placeholder="Пошта" />
-      <button class="form_btnSubmit" type="submit">Залишити заявку</button>
+      <input type="text" name="" id="form_form-Name" placeholder="Им'я" />
+      <input type="tel" name="" id="form_form-Phone" placeholder="Телефон" />
+      <input type="email" name="" id="form_form-Email" placeholder="Пошта" />
+      <button class="form_btnSubmit" id="form_form-btnSubmit" type="submit">Залишити заявку</button>
     </form>
   </div>
 </section>
