--- a/src/partials/Main/main.html
+++ b/src/partials/Main/main.html
@@ -4,10 +4,23 @@
       <!-- <img src="./images/svg/logo.svg" alt="" /> -->
     </a>
     <nav class="header_nav">
-      <a href="" class="header_nav_item">Головна</a>
+      <a href="" class="header_nav_item header_nav_item-main">Головна</a>
       <a href="" class="header_nav_item">Екскурсії</a>
       <a href="" class="header_nav_item">Особистий кабінет</a>
     </nav>
+    <div class="menu_burger">
+      <span></span>
+    </div>
+    <!-- <div class="mobil_menu">
+      <div class="wrapperForMenuContent">
+        <nav class="mobile_nav">
+          <a href="" class="mobile_nav_item">Головна</a>
+          <a href="" class="mobile_nav_item">Екскурсії</a>
+          <a href="" class="mobile_nav_item">Особистий кабінет</a>
+        </nav>
+        <span></span>
+      </div>
+    </div> -->
   </header>
 
   <div class="wrapperFor_mainContent">
@@ -21,17 +34,23 @@
     <ul class="list main_socials">
       <li class="main_socials_item">
         <a href="https://twitter.com/?lang=uk">
-          <svg width="32" height="32"><use href="./images/svg/symbols.svg#twitter"></use></svg>
+          <svg width="32" height="32">
+            <use href="./images/svg/symbols.svg#twitter"></use>
+          </svg>
         </a>
       </li>
       <li class="main_socials_item">
         <a href="https://www.instagram.com/">
-          <svg width="32" height="32"><use href="./images/svg/symbols.svg#insta"></use></svg>
+          <svg width="32" height="32">
+            <use href="./images/svg/symbols.svg#insta"></use>
+          </svg>
         </a>
       </li>
       <li class="main_socials_item">
         <a href="https://uk-ua.facebook.com/">
-          <svg width="32" height="32"><use href="./images/svg/symbols.svg#facebook"></use></svg>
+          <svg width="32" height="32">
+            <use href="./images/svg/symbols.svg#facebook"></use>
+          </svg>
         </a>
       </li>
     </ul>
