--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -74,7 +74,7 @@
 }
 .footer_social-twitter {
   svg {
-    stroke: #bc0000;
+    stroke: #1da1f2;
   }
 }
 .footer_social-insta {
@@ -84,6 +84,6 @@
 }
 .footer_social-facebook {
   svg {
-    stroke: #17c1bc;
+    stroke: #4267b2;
   }
 }
