--- a/src/sass/Main/_main.scss
+++ b/src/sass/Main/_main.scss
@@ -2,15 +2,26 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  max-width: 100%;
   height: 789px;
-  padding: 26px 160px;
+  padding: 26px 29px;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url(../images/mainPhoto.jpg);
+
+  @media screen and (min-width: 768px) {
+    padding: 26px 79px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 26px 129px;
+  }
+  @media screen and (min-width: 1400px) {
+    padding: 26px 160px;
+  }
 }
 
 .header {
-  width: 100%;
+  max-width: 100%;
   height: 60px;
   display: flex;
   justify-content: space-between;
@@ -26,7 +37,20 @@
   }
 }
 .header_nav {
-  display: flex;
+  transition: all ease 0.3s;
+
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+  &.active {
+    display: flex;
+    @media screen and (max-width: 550px) {
+      .header_nav_item-main {
+        display: none;
+      }
+    }
+  }
 }
 .header_nav_item {
   font-size: 14px;
@@ -39,6 +63,142 @@
   }
 }
 
+.menu_burger {
+  cursor: pointer;
+  display: none;
+  position: relative;
+  width: 30px;
+  height: 24px;
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    transition: all ease 0.5s;
+  }
+  &::before {
+    top: 0;
+  }
+  &::after {
+    bottom: 0;
+  }
+
+  span {
+    transition: all ease 0.5s;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    top: 11px;
+  }
+
+  &.active {
+    &::before {
+      transform: rotate(45deg);
+      top: 11px;
+    }
+    &::after {
+      transform: rotate(-45deg);
+      bottom: 11px;
+    }
+    span {
+      transform: scale(0);
+    }
+  }
+  @media screen and (max-width: 767px) {
+    display: block;
+  }
+}
+// .mobil_menu {
+//   display: none;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100vw;
+//   background-color: rgba(0, 0, 0, 0.7);
+//   // opacity: 1;
+//   // transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   z-index: 99;
+//   padding: 10px 20px;
+//   &.is-open {
+//     @media screen and (max-width: 767.98px) {
+//       display: flex;
+
+//       overflow: hidden;
+//       z-index: 100;
+//     }
+//   }
+// }
+// .wrapperForMenuContent {
+//   position: relative;
+//   width: 100%;
+//   height: 80px;
+
+//   span {
+//     position: absolute;
+//     display: flex;
+//     flex-direction: column;
+//     right: 40px;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     display: block;
+//     content: '';
+//     width: 20px;
+//     height: 3px;
+//     background-color: yellow;
+//     border-radius: 30px;
+
+//     &::before {
+//       position: absolute;
+//       display: flex;
+//       content: '';
+//       width: 20px;
+//       height: 3px;
+//       top: -8px;
+//       background-color: red;
+//       border-radius: 30px;
+//       transform: rotate(45deg) translateY(6px) translateX(5px);
+//     }
+//     &::after {
+//       position: absolute;
+//       display: flex;
+//       content: '';
+//       width: 20px;
+//       height: 3px;
+//       top: 8px;
+//       background-color: white;
+//       border-radius: 30px;
+//       transform: rotate(-45deg) translateY(-6px) translateX(6px);
+//     }
+//   }
+// }
+// .mobile_nav {
+//   @media screen and (max-width: 767.98px) {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: flex-start;
+//     width: 100%;
+//     height: 100%;
+//     background-color: blue;
+//     padding: 10px 20px;
+//   }
+// }
+// .mobile_nav_item {
+//   font-size: 14px;
+//   line-height: 17px;
+//   &:not(:last-child) {
+//     margin-bottom: 10px;
+//   }
+//   &:active {
+//     color: #ffc700;
+//   }
+// }
 // -------mainTitle-------//
 
 .wrapperFor_mainContent {
@@ -54,6 +214,7 @@
   font-weight: 700;
   font-size: 72px;
   line-height: 88px;
+
   margin-bottom: 65px;
 }
 @font-face {
@@ -73,10 +234,11 @@
   font-weight: 400;
   font-size: 64px;
   line-height: 64px;
+
   color: #ffc700;
 
   position: absolute;
-  left: 490px;
+  left: 68%;
   top: 50px;
 }
 .main_title_span-PeroTravel {
@@ -121,9 +283,9 @@
 
   &:hover {
     cursor: pointer;
+
     & svg {
       stroke: #ffc700;
-      fill: #ffc700;
     }
   }
 }
