done adaptiv on section main

--- a/src/partials/Main/main.html
+++ b/src/partials/Main/main.html
@@ -1,59 +1,51 @@
 <section class="main">
-  <header class="header">
-    <a class="header_logo" href="">
-      <!-- <img src="./images/svg/logo.svg" alt="" /> -->
-    </a>
-    <nav class="header_nav">
-      <a href="" class="header_nav_item header_nav_item-main">Головна</a>
-      <a href="" class="header_nav_item">Екскурсії</a>
-      <a href="" class="header_nav_item">Особистий кабінет</a>
-    </nav>
-    <div class="menu_burger">
-      <span></span>
-    </div>
-    <!-- <div class="mobil_menu">
-      <div class="wrapperForMenuContent">
-        <nav class="mobile_nav">
-          <a href="" class="mobile_nav_item">Головна</a>
-          <a href="" class="mobile_nav_item">Екскурсії</a>
-          <a href="" class="mobile_nav_item">Особистий кабінет</a>
-        </nav>
+  <div class="container">
+    <header class="header">
+      <a class="header_logo" href="">
+        <!-- <img src="./images/svg/logo.svg" alt="" /> -->
+      </a>
+      <nav class="header_nav">
+        <a href="./index.html" class="header_nav_item header_nav_item-main activ_link">Головна</a>
+        <a href="./excursions.html" class="header_nav_item">Екскурсії</a>
+        <a href="" class="header_nav_item">Особистий кабінет</a>
+      </nav>
+      <div class="menu_burger">
         <span></span>
       </div>
-    </div> -->
-  </header>
+    </header>
 
-  <div class="wrapperFor_mainContent">
-    <div class="wrapperFor_mainTitle">
-      <h1 class="main_title">
-        ПОДОРОЖУЙ <br /><span class="main_title_span-together">разом з</span>
-        <span class="main_title_span-PeroTravel">PERO TRAVEL</span>
-      </h1>
-      <a href="" class="main_buttom">До екскурсій</a>
+    <div class="wrapperFor_mainContent">
+      <div class="wrapperFor_mainTitle">
+        <h1 class="main_title">
+          ПОДОРОЖУЙ <br /><span class="main_title_span-together">разом з</span>
+          <span class="main_title_span-PeroTravel">PERO TRAVEL</span>
+        </h1>
+        <a href="" class="main_buttom">До екскурсій</a>
+      </div>
+      <ul class="list main_socials">
+        <li class="main_socials_item">
+          <a href="https://twitter.com/?lang=uk">
+            <svg width="32" height="32">
+              <use href="./images/svg/symbols.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="main_socials_item">
+          <a href="https://www.instagram.com/">
+            <svg width="32" height="32">
+              <use href="./images/svg/symbols.svg#insta"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="main_socials_item">
+          <a href="https://uk-ua.facebook.com/">
+            <svg width="32" height="32">
+              <use href="./images/svg/symbols.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
-    <ul class="list main_socials">
-      <li class="main_socials_item">
-        <a href="https://twitter.com/?lang=uk">
-          <svg width="32" height="32">
-            <use href="./images/svg/symbols.svg#twitter"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="main_socials_item">
-        <a href="https://www.instagram.com/">
-          <svg width="32" height="32">
-            <use href="./images/svg/symbols.svg#insta"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="main_socials_item">
-        <a href="https://uk-ua.facebook.com/">
-          <svg width="32" height="32">
-            <use href="./images/svg/symbols.svg#facebook"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
   </div>
   <div class="main_video">
     <div class="main_video_first"><img src="./images/video1.jpg" alt="" /></div>
