--- a/src/partials/Main/popularExcursions.html
+++ b/src/partials/Main/popularExcursions.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="popularExcursions_wrapperForText">
       <p class="popularExcursions_text">Популярні екскурсії</p>
-      <a class="popularExcursions_link" href="#">Дивитись всі</a>
+      <a class="popularExcursions_link" href="./excursions.html">Дивитись всі</a>
     </div>
     <div class="popularExcursions_slaider">
       <div class="popularExcursions_slaider_line">
