--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,3 +8,6 @@
 @import './Main/smallGallery';
 @import './Main/reviews';
 @import './Main/form';
+
+@import './Excursions/excursions';
+@import './Excursions/searchTrip';
