--- a/src/sass/Main/_aboutUs.scss
+++ b/src/sass/Main/_aboutUs.scss
@@ -1,27 +1,64 @@
 .aboutUs {
   margin-top: 150px;
-  position: relative;
-  width: 1071px;
+
+  max-width: calc(100vw - 7%);
   height: 749px;
+  position: relative;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url(../images/secondMainPhoto.jpg);
+
   border-radius: 0px 10px 10px 0px;
+  @media screen and (min-width: 1171px) {
+    max-width: 1071px;
+  }
 }
 .wrapperForText {
   position: absolute;
   top: 50%;
   left: 100%;
-  transform: translate(-60%, -50%);
+
+  // transform: translate(-90%, -50%);
+  // transform: translate(-0%, -50%);
+  // margin-right: 24px;
   color: black;
-  width: 542px;
-  height: 476px;
+  width: 380px;
+  height: 386px;
   background: #ededed;
   border-radius: 10px;
-  padding: 60px 75px 60px 85px;
+  padding: 43px;
 
   p {
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 13px;
+    line-height: 16px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 17px;
+    }
+  }
+  @media screen and (max-width: 767.98px) {
+    transform: translate(-78%, -50%);
+  }
+  // @media screen and (min-width: 480px) and (max-width: 767.98px) {
+  //   transform: translate(-78%, -50%);
+  // }
+
+  @media screen and (min-width: 768px) {
+    width: 493px;
+    height: 433px;
+    padding: 68px 55px 50px 56px;
+
+    top: 50%;
+    left: 100%;
+    transform: translate(-85%, -50%);
+  }
+  @media screen and (min-width: 1350px) {
+    width: 542px;
+    height: 476px;
+    padding: 60px 75px 60px 85px;
+    top: 50%;
+    left: 100%;
+    transform: translate(-60%, -50%);
   }
 }
 .aboutUs_title {
@@ -30,7 +67,7 @@
   line-height: 29px;
   color: #0499dd;
 
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .aboutUs_text {
   margin-bottom: 20px;
