--- a/src/sass/Main/_main.scss
+++ b/src/sass/Main/_main.scss
@@ -263,12 +263,19 @@
 }
 .main_video_first {
   margin-right: 20px;
-  max-width: 295px;
+  max-width: 150px;
   img {
     border-radius: 11px;
   }
-  @media screen and (min-width: 1250px) {
-    max-width: 360px;
+  @media screen and (min-width: 480px) and (max-width: 767.98px) {
+    max-width: 200px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 240px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 295px;
   }
 }
 .main_video_second {
@@ -276,8 +283,15 @@
   img {
     border-radius: 11px;
   }
-  max-width: 295px;
-  @media screen and (min-width: 1250px) {
-    max-width: 360px;
+  max-width: 150px;
+  @media screen and (min-width: 480px) and (max-width: 767.98px) {
+    max-width: 200px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 240px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 295px;
   }
 }
