--- a/src/sass/Main/_popularExcursions.scss
+++ b/src/sass/Main/_popularExcursions.scss
@@ -2,18 +2,29 @@
   margin-top: 200px;
   // padding: 0 160px;
   color: black;
+  max-width: 100vw;
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
+  }
 }
 .popularExcursions_wrapperForText {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 90px;
+  @media screen and(max-width: 480px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 .popularExcursions_text {
   font-weight: 700;
   font-size: 24px;
   line-height: 29px;
   color: #0499dd;
+  @media screen and(max-width: 480px) {
+    margin-bottom: 20px;
+  }
 }
 .popularExcursions_link {
   font-weight: 500;
@@ -150,7 +161,7 @@
 }
 .scrolling_progres {
   position: relative;
-  width: 1034px;
+  width: 100%;
   height: 2px;
   background-color: #b9b9b9;
   border-radius: 20px;
@@ -163,7 +174,7 @@
   top: 50%;
   transform: translateY(-50%);
   height: 3px;
-  width: 344.6px;
+  width: 33.333%;
 
   background-color: #0499dd;
   border-radius: 20px;
