--- a/src/sass/Main/_reviews.scss
+++ b/src/sass/Main/_reviews.scss
@@ -72,7 +72,7 @@
   top: 50%;
   transform: translateY(-50%);
   height: 3px;
-  width: 258.5px;
+  width: 25%;
 
   background-color: #0499dd;
   border-radius: 20px;
