--- a/src/sass/Main/_form.scss
+++ b/src/sass/Main/_form.scss
@@ -1,24 +1,39 @@
 .form {
   color: #fff;
-  width: 1440px;
+  // width: 1440px;
   height: 640px;
   background-image: url(../images/forest.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   margin-top: 150px;
+
+  max-width: 100vw;
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
+  }
+  @media screen and(max-width: 767.98px) {
+    margin-right: auto;
+    height: 928px;
+    & .container {
+      padding-top: 25px;
+    }
+  }
 }
 .form_form {
   display: flex;
   flex-direction: column;
-  width: 560px;
+  max-width: 380px;
   height: 640px;
   backdrop-filter: blur(10px);
 
-  padding: 132px 95px 132px 105px;
+  padding: 132px 41px 132px 43px;
   margin-left: auto;
   & input {
     font-size: 14px;
     line-height: 17px;
-    width: 360px;
+    width: 100%;
     border: none;
     outline: none;
     color: white;
@@ -34,6 +49,20 @@
     &:not(:last-child) {
       margin-bottom: 45px;
     }
+    // @media screen and (min-width: 1250px) {
+    //   width: 360px;
+    // }
+  }
+  @media screen and(max-width: 767.98px) {
+    margin-right: auto;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    max-width: 400px;
+  }
+  @media screen and (min-width: 1250px) {
+    max-width: 560px;
+    padding: 132px 95px 132px 105px;
   }
 }
 .form_title {
@@ -63,5 +92,8 @@
   &:hover {
     font-size: 16px;
     background: linear-gradient(92.71deg, #08b8b2 0%, #067bb1 100%);
+  }
+  @media screen and(max-width: 767.98px) {
+    align-self: center;
   }
 }
