--- a/src/sass/Main/_reviews.scss
+++ b/src/sass/Main/_reviews.scss
@@ -1,6 +1,10 @@
 .reviews {
   margin-top: 150px;
   color: black;
+  max-width: 100vw;
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
+  }
 }
 
 .reviews_slaider {
@@ -18,8 +22,10 @@
 .line_item {
   position: relative;
   display: flex;
-  min-width: 740px;
-  padding: 38px 27px 38px 45px;
+  // min-width: 740px;
+  padding: 32px 24px 38px 28px;
+  width: 280px;
+  height: 447px;
   background: #ededed;
   border-radius: 10px;
   &::after {
@@ -33,12 +39,35 @@
   &:not(:last-child) {
     margin-right: 20px;
   }
+  @media screen and (max-width: 767.98px) {
+    flex-direction: column;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    min-width: 505px;
+    padding: 26px 17px 28px 31px;
+  }
+  @media screen and (min-width: 1250px) {
+    min-width: 740px;
+    padding: 38px 27px 38px 45px;
+  }
 }
 .line_item_img {
-  width: 245px;
-  height: 245px;
+  width: 80px;
+  height: 80px;
   border-radius: 10px;
-  margin-right: 28px;
+  margin-bottom: 20px;
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    width: 168px;
+    height: 168px;
+    margin-right: 20px;
+    margin-bottom: 0px;
+  }
+  @media screen and (min-width: 1250px) {
+    width: 245px;
+    height: 245px;
+    margin-right: 28px;
+    margin-bottom: 0px;
+  }
 }
 .line_item_wrapperForText {
 }
@@ -47,11 +76,22 @@
   font-size: 14px;
   line-height: 17px;
   margin: 20px 0;
+  @media screen and (max-width: 1249.98px) {
+    margin: 10px 0;
+  }
 }
 .line_item_text {
-  font-size: 14px;
-  line-height: 17px;
+  font-size: 13px;
+  line-height: 16px;
   z-index: 2;
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  @media screen and (min-width: 1250px) {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
 .reviews_wrapperForScrolling {
   display: flex;
