--- a/src/sass/Main/_smallGallery.scss
+++ b/src/sass/Main/_smallGallery.scss
@@ -1,6 +1,14 @@
 .smallGalery {
   margin-top: 150px;
+  // margin: 150px auto 0 auto;
   color: black;
+  max-width: 100vw;
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
+  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .smallGalery_wrapperForPhoto {
@@ -13,37 +21,87 @@
     width: 100%;
     height: 100%;
   }
+  @media screen and (min-width: 768px) and (max-width: 1250px) {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  @media screen and (max-width: 767.98px) {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 100px;
+  }
 }
 
 .smallGalery_img1 {
   grid-column: 1/3;
   grid-row: 1/3;
+  @media screen and (min-width: 768px) and (max-width: 1250px) {
+    display: none;
+  }
+  @media screen and (max-width: 767.98px) {
+    grid-column: 1/5;
+    grid-row: 5/7;
+  }
 }
 .smallGalery_img2 {
   grid-column: 3/4;
   grid-row: 1/5;
+  @media screen and (min-width: 768px) and (max-width: 1250px) {
+    grid-column: 1/3;
+  }
+  @media screen and (max-width: 767.98px) {
+    grid-column: 1/3;
+    grid-row: 1/5;
+  }
 }
 .smallGalery_img3 {
   grid-column: 4/5;
   grid-row: 1/3;
+  @media screen and (min-width: 768px) and (max-width: 1250px) {
+    grid-column: 3/5;
+  }
+  @media screen and (max-width: 767.98px) {
+    grid-column: 3/5;
+    grid-row: 1/3;
+  }
 }
 .smallGalery_img4 {
   grid-column: 5/6;
   grid-row: 1/3;
+  @media screen and (min-width: 768px) and (max-width: 1250px) {
+    grid-column: 5/7;
+  }
+  @media screen and (max-width: 767.98px) {
+    display: none;
+  }
 }
 .smallGalery_img5 {
   grid-column: 1/2;
   grid-row: 3/5;
+  @media screen and (max-width: 1250px) {
+    display: none;
+  }
 }
 .smallGalery_img6 {
   grid-column: 2/3;
   grid-row: 3/4;
+  @media screen and (max-width: 1250px) {
+    display: none;
+  }
 }
 .smallGalery_img7 {
   grid-column: 2/3;
   grid-row: 4/5;
+  @media screen and (max-width: 1250px) {
+    display: none;
+  }
 }
 .smallGalery_img8 {
   grid-column: 4/6;
   grid-row: 3/5;
+  @media screen and (min-width: 768px) and (max-width: 1250px) {
+    grid-column: 3/7;
+  }
+  @media screen and (max-width: 767.98px) {
+    grid-column: 3/5;
+    grid-row: 3/5;
+  }
 }
