--- a/src/sass/Main/_typeOfExcursions.scss
+++ b/src/sass/Main/_typeOfExcursions.scss
@@ -1,10 +1,14 @@
 .typeOfExcursions {
   margin-top: 150px;
   color: black;
+  max-width: 100vw;
 
   .main_buttom {
     color: #fff;
     margin: 0 auto;
+  }
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
   }
 }
 .typeOfExcursions_title {
@@ -15,16 +19,21 @@
   margin-bottom: 90px;
 }
 .typeOfExcursions_list {
-  display: flex;
-  flex-wrap: wrap;
   margin-bottom: 20px;
+  @media screen and (min-width: 1150px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .typeOfExcursions_list_item {
   display: flex;
-  max-width: 500px;
+  width: 100%;
   margin: 0 20px 40px 0;
   &:nth-child(2n + 2) {
     margin-right: 0;
+  }
+  @media screen and (min-width: 1150px) {
+    max-width: 500px;
   }
 }
 .list_item_wrapperForText {
