--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-  height: 173px;
+  max-width: 100vw;
+  max-height: 412px;
   background: #ededed;
   color: #282828;
   display: flex;
@@ -7,17 +8,41 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    @media screen and (max-width: 767.98px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 110px;
+      grid-gap: 20px;
+    }
+  }
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
+    height: 173px;
   }
 }
 
 .footer_logo {
-  display: block;
+  display: flex;
   width: 80px;
   height: 114px;
+  @media screen and (max-width: 767.98px) {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    justify-self: center;
+  }
 }
 .footer_nav {
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 767.98px) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin: 0 auto;
+  }
 }
 .footer_nav_item {
   font-size: 14px;
@@ -32,6 +57,11 @@
 .footer_contacts_list {
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 767.98px) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin: 0 auto;
+  }
 }
 .contacts_list_item {
   display: flex;
@@ -65,6 +95,11 @@
 }
 .footer_socials {
   display: flex;
+  @media screen and (max-width: 767.98px) {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    justify-self: center;
+  }
 }
 
 .footer_socials_item {
