--- a/src/sass/Excursions/_excursions.scss
+++ b/src/sass/Excursions/_excursions.scss
@@ -1,17 +1,37 @@
 .excursions {
-  width: 1440px;
+  max-width: 100vw;
   height: 289px;
-  background: url(../images/excursions.jpg) no-repeat center;
+  background: url(../images/excursions.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   padding: 26px 0px;
   & .container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
+  @media screen and (max-width: 1250px) {
+    height: 510px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
+  }
 }
 .excursions_title {
   font-weight: 700;
-  font-size: 72px;
-  line-height: 88px;
-  margin-bottom: 31px;
+  font-size: 36px;
+  line-height: 44px;
+  // margin-bottom: 31px;
+  margin: auto 0;
+
+  @media screen and (min-width: 480px) and (max-width: 900px) {
+    font-size: 48px;
+    line-height: 59px;
+  }
+  @media screen and (min-width: 900px) {
+    font-size: 72px;
+    line-height: 88px;
+  }
 }
