--- a/src/sass/Main/_main.scss
+++ b/src/sass/Main/_main.scss
@@ -15,9 +15,6 @@
     display: flex;
     flex-direction: column;
   }
-  // @media screen and (min-width: 768px) {
-  //   padding: 26px 79px;
-  // }
 
   @media screen and (min-width: 1440px) {
     max-width: 1440px;
@@ -68,6 +65,10 @@
       display: none;
     }
   }
+  // @media screen and (max-width: 350px) {
+  //   font-size: 12px;
+  // line-height: 15px;
+  // }
 }
 
 .menu_burger {
@@ -131,6 +132,9 @@
   justify-content: space-between;
   align-items: center;
   margin: auto 0;
+  @media screen and (max-width: 400px) {
+    flex-direction: column;
+  }
 }
 .wrapperFor_mainTitle {
 }
@@ -238,6 +242,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 400px) {
+    margin-top: 80px;
+    flex-direction: row;
+  }
 }
 .main_socials_item {
   &:not(:last-child) {
@@ -249,6 +257,12 @@
 
     & svg {
       stroke: #ffc700;
+    }
+  }
+  @media screen and (max-width: 400px) {
+    &:not(:last-child) {
+      margin-bottom: 0px;
+      margin-right: 20px;
     }
   }
 }
