done adapt searchTrip

--- a/src/partials/Excursions/searchTrip.html
+++ b/src/partials/Excursions/searchTrip.html
@@ -9,14 +9,14 @@
     <ul class="list searchTrip_listInputs">
       <li class="searchTrip_listInputs_item select_location">
         <select name="location" id="select_location">
-          <option value="Місто1">Місто1</option>
-          <option value="Місто2">Місто2</option>
-          <option value="Місто3">Місто3</option>
-          <option value="Місто3">Місто4</option>
-          <option value="Місто3">Місто5</option>
+          <option value="Місто1">Місто 1</option>
+          <option value="Місто2">Місто 2</option>
+          <option value="Місто3">Місто 3</option>
+          <option value="Місто3">Місто 4</option>
+          <option value="Місто3">Місто 5</option>
         </select>
       </li>
-      <li class="searchTrip_listInputs_item">
+      <li class="searchTrip_listInputs_item select_date">
         <label for="input-date" id="input_date">
           <input
             type="date"
@@ -29,13 +29,13 @@
         </label>
       </li>
 
-      <li class="searchTrip_listInputs_item">
+      <li class="searchTrip_listInputs_item select_quantity">
         <select name="quantity" id="select_quantity">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="3">4</option>
-          <option value="3">5</option>
+          <option value="1">1 Пасажир</option>
+          <option value="2">2 Пасажира</option>
+          <option value="3">3 Пасажира</option>
+          <option value="3">4 Пасажира</option>
+          <option value="3">5 Пасажирів</option>
         </select>
       </li>
       <li class="searchTrip_listInputs_item">
