--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,4 +11,4 @@
 
 @import './Excursions/excursions';
 @import './Excursions/searchTrip';
-@import './Excursions/filter';
+@import './Excursions/ourTrip';
