--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,4 @@
 @import './Excursions/excursions';
 @import './Excursions/searchTrip';
 @import './Excursions/ourTrip';
+@import './Excursions/filter';
