--- a/src/sass/Excursions/_ourTrip.scss
+++ b/src/sass/Excursions/_ourTrip.scss
@@ -1,6 +1,11 @@
+.right {
+  display: flex;
+}
 .ourTrip {
+  justify-content: flex-end;
   color: #000;
   margin-top: 40px;
+  margin-left: auto;
 }
 .ourTrip_title {
   font-weight: 700;
@@ -15,28 +20,34 @@
 // }
 
 .ourTrip_list {
-  max-width: 779px;
-  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.05);
-  border-radius: 10px;
-  background: #ffffff;
+  margin-bottom: 40px;
 }
 // .ourTrip_slider_line {
 // }
 
 .ourTrip_item {
   display: flex;
+  max-width: 779px;
+  border-radius: 10px;
+  background: #ffffff;
+
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.05);
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 // .ourTrip_slider_line_content {
 // }
 
 .ourTrip_item_img {
   min-width: 238px;
-  object-fit: cover;
 
   border-radius: 10px 0px 0px 10px;
   & img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    border-radius: 10px 0px 0px 10px;
   }
 }
 .wrapperFor_item_content {
@@ -62,7 +73,7 @@
 .wrapperFor_oldBillet {
   margin-right: 10px;
   & svg {
-    vertical-align: middle;
+    vertical-align: text-top;
     fill: #0499dd;
   }
 }
@@ -74,7 +85,7 @@
 .wrapperFor_youngBillet {
   margin-right: 40px;
   & svg {
-    vertical-align: middle;
+    vertical-align: text-top;
     fill: #0499dd;
   }
 }
@@ -149,6 +160,7 @@
   border-radius: 50%;
   background-color: #ededed;
   border: 2px solid #ededed;
+  cursor: pointer;
   & svg {
     fill: #d4d4d4;
   }
