--- a/src/sass/Excursions/_filter.scss
+++ b/src/sass/Excursions/_filter.scss
@@ -2,14 +2,29 @@
   display: flex;
   flex-direction: column;
   color: black;
-  width: 295px;
-  height: 1018px;
+  max-width: 400px;
+  max-height: 1030px;
   background: #ffffff;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
-  margin-top: 40px;
+  margin-top: 60px;
   margin-right: 10px;
+  margin-bottom: 150px;
   padding: 25px 35px;
+  @media screen and (max-width: 767.98px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    max-width: 610px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+  }
+  @media screen and (min-width: 1250px) {
+    max-width: 295px;
+    margin-top: 40px;
+  }
 }
 .filter_title {
   font-weight: 700;
@@ -17,6 +32,7 @@
   line-height: 17px;
   color: #0499dd;
   margin-bottom: 40px;
+  width: 100%;
 }
 .underLine {
   margin-bottom: 30px;
@@ -29,7 +45,24 @@
     margin-top: 40px;
   }
 }
+.filter-maxWidth {
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    width: calc((100% - 50px) / 2);
+  }
+}
+.wrapperContent {
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    // max-width: 610px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
 .filter_price {
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    margin-right: 50px;
+  }
 }
 .wrapperFor_filter_text {
   display: flex;
@@ -126,6 +159,10 @@
   line-height: 15px;
 
   color: #282828;
+
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    margin-right: 50px;
+  }
 }
 .filter_location_iputs {
   display: flex;
@@ -145,6 +182,9 @@
 .filter_duration {
 }
 .filter_date {
+  @media screen and (min-width: 768px) and (max-width: 1249.98px) {
+    margin-right: 50px;
+  }
 }
 .filter_button {
   display: flex;
@@ -165,6 +205,12 @@
   &:hover {
     font-size: 14px;
     background: linear-gradient(92.71deg, #08b8b2 0%, #067bb1 100%);
+  }
+
+  @media screen and (max-width: 1249.98px) {
+    width: 255px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .wrapperFor_filter_reset {
