done first 2 section of page1

--- a/src/partials/Excursions/ourTrip.html
+++ b/src/partials/Excursions/ourTrip.html
@@ -135,7 +135,7 @@
         </div>
       </li>
       <li class="ourTrip_item ourTrip_slider_line_content">
-        <div class="ourTrip_item_img"><img src="./images/lake.jpg" alt="" /></div>
+        <div class="ourTrip_item_img"><img src="./images/greenRock.jpg" alt="" /></div>
         <div class="wrapperFor_item_content">
           <p class="ourTrip_item_subTitle">Автобусний тур</p>
           <h2 class="ourTrip_item_title">Золота каблучка Абхазії (з Адлера)</h2>
@@ -171,7 +171,7 @@
             вашого готелю чи найближчої автобусної зупинки. Перетин кордону без пересадок.
           </p>
           <div class="wrapperFor_ourTrip_buttons">
-            <a class="ourTrip_button" href="#">Детальніше</a>
+            <a class="ourTrip_button" href="./page1.html">Детальніше</a>
             <span class="ourTrip_span">
               <svg width="20" height="20"><use href="./images/svg/symbols.svg#heart"></use></svg>
             </span>
