--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <a href="./index.html" class="footer_logo"><img src="./images/svg/color_logo.svg" alt="" /></a>
     <nav class="footer_nav">
       <a href="./index.html" class="footer_nav_item">Головна</a>
-      <a href="" class="footer_nav_item">Екскурсії</a>
+      <a href="./excursions.html" class="footer_nav_item">Екскурсії</a>
       <a href="" class="footer_nav_item">Особистий кабінет</a>
     </nav>
     <ul class="list footer_contacts_list">
