--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,3 +13,7 @@
 @import './Excursions/searchTrip';
 @import './Excursions/ourTrip';
 @import './Excursions/filter';
+
+@import './pagesExcursions/page1Header';
+@import './pagesExcursions/page1Description';
+@import './pagesExcursions/page1Calendar';
