--- a/src/sass/Main/_aboutUs.scss
+++ b/src/sass/Main/_aboutUs.scss
@@ -1,24 +1,34 @@
 .aboutUs {
   margin-top: 150px;
 
-  max-width: calc(100vw - 7%);
-  height: 749px;
+  // max-width: calc(100vw - 7%);
+  // height: 749px;
+  // position: relative;
+
+  border-radius: 0px 10px 10px 0px;
+  // @media screen and (min-width: 1171px) {
+  //   max-width: 1071px;
+  // }
+  height: 877px;
+  display: flex;
+}
+.wrapper_aboutUs_img {
   position: relative;
+  width: 65%;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url(../images/secondMainPhoto.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
-  border-radius: 0px 10px 10px 0px;
-  @media screen and (min-width: 1171px) {
-    max-width: 1071px;
-  }
+  border-radius: 0 10px 10px 0;
 }
 .wrapperForText {
   position: absolute;
   top: 50%;
-  left: 100%;
+  right: -40%;
+  transform: translateY(-50%);
+  // top: 50%;
+  // left: 100%;
 
   // transform: translate(-90%, -50%);
   // transform: translate(-0%, -50%);
@@ -39,29 +49,31 @@
       line-height: 17px;
     }
   }
-  @media screen and (max-width: 767.98px) {
-    transform: translate(-78%, -50%);
-  }
+  // @media screen and (max-width: 767.98px) {
+  //   transform: translate(-78%, -50%);
+  // }
   // @media screen and (min-width: 480px) and (max-width: 767.98px) {
   //   transform: translate(-78%, -50%);
   // }
-
+  @media screen and (max-width: 380px) {
+    position: relative;
+  }
   @media screen and (min-width: 768px) {
     width: 493px;
     height: 433px;
     padding: 68px 55px 50px 56px;
 
-    top: 50%;
-    left: 100%;
-    transform: translate(-85%, -50%);
+    // top: 50%;
+    // left: 100%;
+    // transform: translate(-85%, -50%);
   }
   @media screen and (min-width: 1350px) {
     width: 542px;
     height: 476px;
     padding: 60px 75px 60px 85px;
-    top: 50%;
-    left: 100%;
-    transform: translate(-60%, -50%);
+    // top: 50%;
+    // left: 100%;
+    // transform: translate(-60%, -50%);
   }
 }
 .aboutUs_title {
