--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -87,3 +87,9 @@ button {
   //   width: 1440px;
   // }
 }
+.section {
+  max-width: 100vw;
+  @media screen and (min-width: 1440px) {
+    max-width: 1440px;
+  }
+}
