done descriptionWay with adapt

--- a/src/partials/Excursions/ourTrip.html
+++ b/src/partials/Excursions/ourTrip.html
@@ -1,4 +1,4 @@
-<section class="ourTrip">
+<section class="section ourTrip">
   <h2 class="ourTrip_title">Наші тури</h2>
   <div class="ourTrip_wrapperForTrips ourTrip_slider">
     <ul class="list ourTrip_list ourTrip_slider_line">
