--- a/src/partials/Main/aboutUs.html
+++ b/src/partials/Main/aboutUs.html
@@ -1,4 +1,4 @@
-<section class="aboutUs">
+<section class="section aboutUs">
   <div class="wrapper_aboutUs_img">
     <div class="wrapperForText">
       <h2 class="aboutUs_title">Про нас</h2>
