--- a/src/partials/pagesExcursions/page1Header.html
+++ b/src/partials/pagesExcursions/page1Header.html
@@ -21,7 +21,7 @@
         (з Адлера)
       </h1>
       <div class="wrapperFor_page1Header_buttons">
-        <a class="page1Header_button" href="./page1.html">До інших екскурсій</a>
+        <a class="page1Header_button" href="./excursions.html">До інших екскурсій</a>
         <span class="page1Header_span">
           <svg width="20" height="20"><use href="./images/svg/symbols.svg#heart"></use></svg>
         </span>
