--- a/src/sass/Excursions/_ourTrip.scss
+++ b/src/sass/Excursions/_ourTrip.scss
@@ -8,10 +8,10 @@
   justify-content: flex-end;
   color: #000;
   margin-top: 60px;
-  @media screen and (max-width: 767.98px) {
-    margin-left: auto;
-    margin-right: auto;
-  }
+  // @media screen and (max-width: 767.98px) {
+  //   margin-left: auto;
+  //   margin-right: auto;
+  // }
   @media screen and (min-width: 768px) and (max-width: 1249.98px) {
     max-width: 610px;
     margin-top: 80px;
@@ -101,6 +101,9 @@
   align-items: flex-start;
   margin-bottom: 20px;
   // width: 296px;
+  @media screen and (max-width: 500px) {
+    justify-content: space-between;
+  }
 }
 .wrapperFor_oldBillet {
   margin-right: 10px;
@@ -120,6 +123,9 @@
   & svg {
     vertical-align: text-top;
     fill: #0499dd;
+  }
+  @media screen and (max-width: 500px) {
+    margin-right: 0;
   }
   @media screen and (min-width: 768px) and (max-width: 1249.98px) {
     margin-right: 20px;
