--- a/src/sass/pagesExcursions/_page1Calendar.scss
+++ b/src/sass/pagesExcursions/_page1Calendar.scss
@@ -1,9 +1,10 @@
 .page1Calendar {
   height: 877px;
   display: flex;
+
+  position: relative;
 }
 .page1Calendar_img {
-  position: relative;
   width: 65%;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url(../images/blueLake.jpg);
@@ -11,12 +12,24 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 0px 10px 10px 0px;
+  @media screen and (min-width: 768px) {
+    position: relative;
+  }
 }
 .page1Calendar_wrapperForCalendar {
   position: absolute;
-  top: 50%;
-  right: -50%;
-  transform: translateY(-50%);
+
+  @media screen and (max-width: 767.98px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  @media screen and (min-width: 768px) {
+    top: 50%;
+    right: -50%;
+    transform: translateY(-50%);
+  }
 }
 .calendar_title {
   font-weight: 700;
