--- a/src/sass/pagesExcursions/_page1Header.scss
+++ b/src/sass/pagesExcursions/_page1Header.scss
@@ -61,6 +61,10 @@
     font-size: 16px;
     background: linear-gradient(92.71deg, #08b8b2 0%, #067bb1 100%);
   }
+
+  @media screen and (max-width: 767.98px) {
+    width: 232px;
+  }
 }
 
 .page1Header_span {
