--- a/src/sass/pagesExcursions/_page1DescriptionExcursion.scss
+++ b/src/sass/pagesExcursions/_page1DescriptionExcursion.scss
@@ -34,6 +34,7 @@
   align-items: center;
   justify-content: space-between;
   width: calc(100% - 470px);
+  z-index: 2;
   @media screen and (max-width: 379.98px) {
     width: 100vw;
     flex-direction: column;
